fix: body and html background, modal text color, vk link, footer align

--- a/src/components/common/PaymentModal/screens/FillDataScreen/FillDataScreen.module.scss
+++ b/src/components/common/PaymentModal/screens/FillDataScreen/FillDataScreen.module.scss
@@ -17,7 +17,7 @@
   border: none;
   border-radius: 4.769px;
   background: #0e0e10;
-  color: fff;
+  color: #fff;
   font-family: Gilroy;
   font-size: 15.262px;
   font-style: normal;
