--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -15,6 +15,7 @@
   width: 100vw;
   height: auto;
   position:relative;
+  margin:0 auto;
 }
 .footer{
   max-width:1920px;
