--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -84,9 +84,10 @@ body {
   max-width: 100vw;
   /* overflow-x: hidden; */
   scroll-behavior: smooth;
+  background-color: #000;
 }
 
-body {
+/* body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -94,7 +95,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+} */
 
 a {
   color: inherit;
